# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: main.yml  travis.yml
format/: formatter.py  json.py  plain color.py  plain.py  stylish.py
gendiff/: diff.py  formatter.py  gendiff.py  parcer.py
gendiff/scripts/: __init__.py  gendiff.py  gendiff_script.py  parcing.py
scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: result.json
