[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["maksimfadeev <7522688@gmail.com>"]
packages = [
    { include = "scripts"}
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
gendiff = "scripts.gendiff:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

